[package]
edition = "2024"
name = "iptv"
version = "0.2.1"

[dependencies]
argh = { git = "https://github.com/google/argh.git", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
    "cookies",
    "json",
]}
tokio = "1"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
] }
actix-web = { version="4.5", default-features = false, features = ["macros"] }
anyhow = "1.0.76"
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
retina = { git = "https://github.com/yujincheng08/retina.git", branch = "iptv", default-features = false }
rtp-rs = "0.6"
tokio-util = { version = "0.7.0", features = ["codec", "net"] }
local-ip-address = "0.6"
socket2 = "0.5"


[features]
http2 = ["reqwest/http2"]
tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
